--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
     "name": "docpad-plugin-browserify",
     "version": "2.0.0",
-    "description": "DocPad plugin that adds the ability to render Something to Something Else",
-    "homepage": "https://github.com/yourgithubusername/docpad-plugin-browserify",
+    "description": "Adds support for compilation of Browserify JavaScript to DocPad",
+    "homepage": "https://github.com/digitaldesigndj/docpad-plugin-browserify",
     "keywords": [
         "docpad",
         "docpad-plugin",
-        "something",
-        "somethingelse"
+        "JavaScript",
+        "Browserify"
     ],
-    "author": "Copyright holders name <copyright holder's email> (copyright holder's website url)",
+    "author": "Taylor Young, http://taylordyoung.com",
     "maintainers": [
-        "Your name <your email> (your github url)"
+        "Taylor Young https://github.com/digitaldesigndj"
     ],
     "contributors": [
-        "Your name <your email> (your github url)"
+        "Taylor Young https://github.com/digitaldesigndj"
     ],
     "bugs": {
-        "url": "https://github.com/yourgithubusername/docpad-plugin-browserify/issues"
+        "url": "https://github.com/digitaldesigndj/docpad-plugin-browserify/issues"
     },
     "repository" : {
         "type": "git",
-        "url": "https://github.com/yourgithubusername/docpad-plugin-browserify.git"
+        "url": "https://github.com/digitaldesigndj/docpad-plugin-browserify.git"
     },
     "engines" : {
         "node": ">=0.8",
