set dependancies, bumped patch version

--- a/package.json
+++ b/package.json
@@ -1,31 +1,34 @@
 {
-    "name": "docpad-plugin-browserify",
-    "version": "2.0.0",
-    "description": "Adds support for compilation of Browserify JavaScript to DocPad",
-    "homepage": "https://github.com/digitaldesigndj/docpad-plugin-browserify",
-    "keywords": [
-        "docpad",
-        "docpad-plugin",
-        "JavaScript",
-        "Browserify"
-    ],
-    "author": "Taylor Young, http://taylordyoung.com",
-    "maintainers": [
-        "Taylor Young https://github.com/digitaldesigndj"
-    ],
-    "contributors": [
-        "Taylor Young https://github.com/digitaldesigndj"
-    ],
-    "bugs": {
-        "url": "https://github.com/digitaldesigndj/docpad-plugin-browserify/issues"
-    },
-    "repository" : {
-        "type": "git",
-        "url": "https://github.com/digitaldesigndj/docpad-plugin-browserify.git"
-    },
-    "engines" : {
-        "node": ">=0.8",
-        "docpad": ">=6"
-    },
-    "main": "./src/browserify.plugin.coffee"
+  "name": "docpad-plugin-browserify",
+  "version": "2.0.1",
+  "description": "Adds support for compilation of Browserify JavaScript to DocPad",
+  "homepage": "https://github.com/digitaldesigndj/docpad-plugin-browserify",
+  "keywords": [
+    "docpad",
+    "docpad-plugin",
+    "JavaScript",
+    "Browserify"
+  ],
+  "author": "Taylor Young, http://taylordyoung.com",
+  "maintainers": [
+    "Taylor Young https://github.com/digitaldesigndj"
+  ],
+  "contributors": [
+    "Taylor Young https://github.com/digitaldesigndj"
+  ],
+  "bugs": {
+    "url": "https://github.com/digitaldesigndj/docpad-plugin-browserify/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/digitaldesigndj/docpad-plugin-browserify.git"
+  },
+  "engines": {
+    "node": ">=0.8",
+    "docpad": ">=6"
+  },
+  "main": "./src/browserify.plugin.coffee",
+  "dependencies": {
+    "browserify": "~2.25.1"
+  }
 }
