--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,20 @@
 npm-debug.log
+
+lib-cov
+*.seed
+*.log
+*.csv
+*.dat
+*.out
+*.pid
+*.gz
+
+pids
+logs
+results
+
+node_modules
+npm-debug.log
+
+test/out/
+out/
